# chip8emu

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  emulator.cpp  emulator.hpp  machine.cpp  machine.hpp
doc/: chip8.md
doc/diagram/: machineDiagram.drawio
src/: CMakeLists.txt  bus.cpp  bus.hpp  cpu.cpp  cpu.hpp  emulator.cpp  emulator.hpp  graphics.cpp  graphics.hpp  input.cpp  input.hpp  machine.cpp  machine.hpp  machineConstants.hpp  main.cpp  memory.cpp  memory.hpp  sound.cpp  sound.hpp  types.hpp
src/sdl/: graphics.cpp  graphics.hpp  keyboardController.cpp  keyboardController.hpp  sound.cpp  sound.hpp
